- DB Fix - Scaffhold fix - Main page (done)

--- a/MLGS/MLGS/Pages/Index.cshtml
+++ b/MLGS/MLGS/Pages/Index.cshtml
@@ -7,33 +7,35 @@
 
 <h2>Index</h2>
 
-<div>
-    <h4>ParcelData</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ParcelData.Temperature_sensor_value)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ParcelData.Temperature_sensor_value)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ParcelData.Pressure_sensor_value)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ParcelData.Pressure_sensor_value)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ParcelData.Humidity_value)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ParcelData.Humidity_value)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ParcelData.Light_sensor_value)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ParcelData.Light_sensor_value)
-        </dd>
-    </dl>
-</div>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Température ambiante (°C) :
+            </th>
+            <th>
+                Humidité dans l'air (%) :
+            </th>
+            <th>
+                Luminosité (lux) :
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.ParcelData)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Temperature_sensor_value)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Humidity_value)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Light_sensor_value)
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
