--- a/MLGS/MLGS/Pages/Index.cshtml
+++ b/MLGS/MLGS/Pages/Index.cshtml
@@ -5,18 +5,19 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Bienvenue</h2>
+<h3>Données de votre parcelle</h3>
 
 <table class="table">
     <thead>
         <tr>
-            <th>
+            <th class="bold-data">
                 Température ambiante (°C) :
             </th>
-            <th>
+            <th class="bold-data">
                 Humidité dans l'air (%) :
             </th>
-            <th>
+            <th class="bold-data">
                 Luminosité (lux) :
             </th>
             <th></th>
