--- a/MLGS/MLGS/Pages/_Layout.cshtml
+++ b/MLGS/MLGS/Pages/_Layout.cshtml
@@ -17,7 +17,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -26,13 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">My Little Green Garden</a>
+                <a asp-page="/Index" class="navbar-brand">My Little Green Sanctuary</a>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-page="/Index">Accueil</a></li>
+            @*<div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a asp-page="/Login">Se connecter</a></li>
                 </ul>
-            </div>
+            </div>*@
         </div>
     </nav>
     <div class="container body-content">
