--- a/MLGS/MLGS/wwwroot/css/site.css
+++ b/MLGS/MLGS/wwwroot/css/site.css
@@ -1,6 +1,13 @@
+@font-face {
+    font-family: 'roboto-light';
+    src: url('../fonts/roboto-light.ttf') format('truetype');
+}
+
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #1f1f1f;
+    font-family: "roboto-light", Arial, Helvetica, sans-serif;
 }
 
 /* Wrapping element */
@@ -8,6 +15,7 @@ body {
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    color: #f7f7f7;
 }
 
 /* Carousel */
@@ -32,4 +40,21 @@ body {
     .carousel-caption {
         display: none;
     }
+}
+
+/* Navigation bar changes */
+#navbar {
+    background-color: #f7f7f7;
+}
+
+#navbar a {
+    color: #1f1f1f;
+}
+
+#navbar a:hover {
+    color: #6a6a6a;
+}
+/* Data list */
+.bold-data {
+    font-weight: 600;
 }
